fix(style): overflow rollback

--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ body {
   font-weight: 400;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .profile-card-component {
